# usos-api

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  run.py
.github/workflows/: publish.yml
docs/: conf.py  full-docs.rst  index.rst  quickstart.rst
usos_api/: auth.py  client.py  connection.py
usos_api/models/: __init__.py  course.py  group.py  lang_dict.py  programme.py  term.py  user.py
usos_api/services/: courses.py  groups.py  users.py
usos_api/tests/: test_course_service.py
