[project]
name = "usos-api"
version = "0.3.4"
description = "Asynchronous USOS API for Python"
authors = [
  { name = "Antoni-Czaplicki", email = "56671347+Antoni-Czaplicki@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.13.3",
    "oauthlib>=3.3",
    "pydantic>=2.12",
    "python-dotenv>=1.2"
]

[project.urls]
Homepage = "https://github.com/Antoni-Czaplicki/usos-api"
Repository = "https://github.com/Antoni-Czaplicki/usos-api"
Documentation = "https://usos-api.readthedocs.io"

[dependency-groups]
dev = [
    "black",
    "isort",
    "ruff"
]
docs = [
    "readthedocs-sphinx-search",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
